--- a/src/p1ch4/chapter4.ipynb
+++ b/src/p1ch4/chapter4.ipynb
@@ -255,6 +255,483 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(tensor([[ 7.0000,  0.2700,  0.3600,  ...,  3.0000,  0.4500,  8.8000],\n         [ 6.3000,  0.3000,  0.3400,  ...,  3.3000,  0.4900,  9.5000],\n         [ 8.1000,  0.2800,  0.4000,  ...,  3.2600,  0.4400, 10.1000],\n         ...,\n         [ 6.5000,  0.2400,  0.1900,  ...,  2.9900,  0.4600,  9.4000],\n         [ 5.5000,  0.2900,  0.3000,  ...,  3.3400,  0.3800, 12.8000],\n         [ 6.0000,  0.2100,  0.3800,  ...,  3.2600,  0.3200, 11.8000]]),\n torch.Size([4898, 11]))"
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = wineq[:, :-1]\n",
+    "data, data.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(tensor([6., 6., 6.,  ..., 6., 7., 6.]), torch.Size([4898]))"
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = wineq[:, -1]\n",
+    "target, target.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([6, 6, 6,  ..., 6, 7, 6])"
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = wineq[:, -1].long()\n",
+    "target"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n        [0., 0., 0.,  ..., 0., 0., 0.],\n        [0., 0., 0.,  ..., 0., 0., 0.],\n        ...,\n        [0., 0., 0.,  ..., 0., 0., 0.],\n        [0., 0., 0.,  ..., 1., 0., 0.],\n        [0., 0., 0.,  ..., 0., 0., 0.]])"
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_onehot = torch.zeros(target.shape[0], 10)\n",
+    "target_onehot.scatter_(1, target.unsqueeze(1), 1.)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([6.8548e+00, 2.7824e-01, 3.3419e-01, 6.3914e+00, 4.5772e-02, 3.5308e+01,\n        1.3836e+02, 9.9403e-01, 3.1883e+00, 4.8985e-01, 1.0514e+01])"
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_mean = torch.mean(data, dim=0)\n",
+    "data_mean"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([7.1211e-01, 1.0160e-02, 1.4646e-02, 2.5726e+01, 4.7733e-04, 2.8924e+02,\n        1.8061e+03, 8.9455e-06, 2.2801e-02, 1.3025e-02, 1.5144e+00])"
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_var = torch.var(data, dim=0)\n",
+    "data_var"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[ 1.7208e-01, -8.1761e-02,  2.1326e-01,  ..., -1.2468e+00,\n         -3.4915e-01, -1.3930e+00],\n        [-6.5743e-01,  2.1587e-01,  4.7996e-02,  ...,  7.3995e-01,\n          1.3422e-03, -8.2419e-01],\n        [ 1.4756e+00,  1.7450e-02,  5.4378e-01,  ...,  4.7505e-01,\n         -4.3677e-01, -3.3663e-01],\n        ...,\n        [-4.2043e-01, -3.7940e-01, -1.1915e+00,  ..., -1.3130e+00,\n         -2.6153e-01, -9.0545e-01],\n        [-1.6054e+00,  1.1666e-01, -2.8253e-01,  ...,  1.0049e+00,\n         -9.6251e-01,  1.8574e+00],\n        [-1.0129e+00, -6.7703e-01,  3.7852e-01,  ...,  4.7505e-01,\n         -1.4882e+00,  1.0448e+00]])"
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_normalized = (data - data_mean) / torch.sqrt(data_var)\n",
+    "data_normalized"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(torch.Size([4898]), torch.bool, tensor(20))"
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bad_indexes = target <= 3\n",
+    "bad_indexes.shape, bad_indexes.dtype, bad_indexes.sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([20, 11])"
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bad_data = data[bad_indexes]\n",
+    "bad_data.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0 fixed acidity          7.60   6.89   6.73\n",
+      " 1 volatile acidity       0.33   0.28   0.27\n",
+      " 2 citric acid            0.34   0.34   0.33\n",
+      " 3 residual sugar         6.39   6.71   5.26\n",
+      " 4 chlorides              0.05   0.05   0.04\n",
+      " 5 free sulfur dioxide   53.33  35.42  34.55\n",
+      " 6 total sulfur dioxide 170.60 141.83 125.25\n",
+      " 7 density                0.99   0.99   0.99\n",
+      " 8 pH                     3.19   3.18   3.22\n",
+      " 9 sulphates              0.47   0.49   0.50\n",
+      "10 alcohol               10.34  10.26  11.42\n"
+     ]
+    }
+   ],
+   "source": [
+    "bad_data = data[target<=3]\n",
+    "mid_data = data[(target > 3) & (target < 7)]\n",
+    "good_data = data[target>=7]\n",
+    "\n",
+    "bad_mean = torch.mean(bad_data, dim=0)\n",
+    "mid_mean = torch.mean(mid_data, dim=0)\n",
+    "good_mean = torch.mean(good_data, dim=0)\n",
+    "\n",
+    "for i, args in enumerate(zip(col_list, bad_mean, mid_mean, good_mean)):\n",
+    "    print('{:2} {:20} {:6.2f} {:6.2f} {:6.2f}'.format(i, *args))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(torch.Size([4898]), torch.bool, tensor(2727))"
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_sulfur_threshold = 141.83\n",
+    "total_sulfur_data = data[:, 6]\n",
+    "predicted_indexes = torch.lt(total_sulfur_data, total_sulfur_threshold)\n",
+    "predicted_indexes.shape, predicted_indexes.dtype, predicted_indexes.sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(torch.Size([4898]), torch.bool, tensor(3258))"
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actual_indexes = target > 5\n",
+    "\n",
+    "actual_indexes.shape, actual_indexes.dtype, actual_indexes.sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(2018, 0.74000733406674, 0.6193984039287906)"
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_matches = torch.sum(actual_indexes & predicted_indexes).item()\n",
+    "n_predicted = torch.sum(predicted_indexes).item()\n",
+    "n_actual = torch.sum(actual_indexes).item()\n",
+    "\n",
+    "n_matches, n_matches/n_predicted, n_matches/n_actual"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(torch.Size([17520, 17]), (17, 1))"
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes_numpy = np.loadtxt(\"../../data/p1ch4/bike-sharing-dataset/hour-fixed.csv\",\n",
+    "                         dtype=np.float32, delimiter=\",\", skiprows=1, converters={1: lambda x: float(x[8:10])})\n",
+    "bikes = torch.from_numpy(bikes_numpy)\n",
+    "bikes.shape, bikes.stride()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(torch.Size([730, 24, 17]), (408, 17, 1))"
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_bikes = bikes.view(-1, 24, bikes.shape[1]) # 24 == hour\n",
+    "daily_bikes.shape, daily_bikes.stride()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(torch.Size([730, 17, 24]), (408, 1, 17))"
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_bikes = daily_bikes.transpose(1, 2)\n",
+    "daily_bikes.shape, daily_bikes.stride()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 3, 3, 2, 2, 2, 2])"
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_day = bikes[:24].long()\n",
+    "weather_onehot = torch.zeros(first_day.shape[0], 4)\n",
+    "first_day[:, 9]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [0., 1., 0., 0.],\n        [1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [1., 0., 0., 0.],\n        [0., 1., 0., 0.],\n        [0., 1., 0., 0.],\n        [0., 1., 0., 0.],\n        [0., 1., 0., 0.],\n        [0., 1., 0., 0.],\n        [0., 0., 1., 0.],\n        [0., 0., 1., 0.],\n        [0., 1., 0., 0.],\n        [0., 1., 0., 0.],\n        [0., 1., 0., 0.],\n        [0., 1., 0., 0.]])"
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_onehot.scatter_(dim=1, index=first_day[:,9].unsqueeze(1).long() -1, value=1.)\n",
+    "weather_onehot"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[ 1.0000,  1.0000,  1.0000,  0.0000,  1.0000,  0.0000,  0.0000,  6.0000,\n          0.0000,  1.0000,  0.2400,  0.2879,  0.8100,  0.0000,  3.0000, 13.0000,\n         16.0000,  1.0000,  0.0000,  0.0000,  0.0000]])"
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat((bikes[:24], weather_onehot), 1)[:1]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([730, 4, 24])"
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_weather_onehot = torch.zeros(daily_bikes.shape[0], 4, daily_bikes.shape[2])\n",
+    "daily_weather_onehot.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([730, 4, 24])"
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_weather_onehot.scatter_(1, daily_bikes[:, 9, :].long().unsqueeze(1)-1, 1.)\n",
+    "daily_weather_onehot.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "outputs": [],
+   "source": [
+    "daily_bikes = torch.cat((daily_bikes, daily_weather_onehot), dim=1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
