--- a/src/p1ch5/Chapter5.ipynb
+++ b/src/p1ch5/Chapter5.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def model(t_u, w, b):\n",
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "tensor([35.7000, 55.9000, 58.2000, 81.9000, 56.3000, 48.9000, 33.9000, 21.8000,\n        48.4000, 60.4000, 68.4000])"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,13 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "tensor(1763.8848)"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,6 +82,121 @@
    "source": [
     "loss = loss_fn(t_p, t_c)\n",
     "loss"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "delta = 0.1\n",
+    "loss_rate_of_change_w = (loss_fn(model(t_u, w+delta, b), t_c)) - (loss_fn(model(t_u, w-delta, b), t_c)) / (2. * delta)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "learning_rate = 1e-2\n",
+    "w = w - learning_rate * loss_rate_of_change_w\n",
+    "\n",
+    "loss_rate_of_change_b = (loss_fn(model(t_u, w, b+delta), t_c) - loss_fn(model(t_u, w, b-delta), t_c)) / (2. * delta)\n",
+    "b = b - learning_rate * loss_rate_of_change_b"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "def loss_fn (t_p, t_c):\n",
+    "    squared_diffs = (t_p - t_c)**2\n",
+    "    return squared_diffs.mean()\n",
+    "\n",
+    "def dloss_fn(t_p, t_c):\n",
+    "    dsq_diffs = 2 * (t_p - t_c) / t_p.size(0)\n",
+    "    return dsq_diffs\n",
+    "\n",
+    "def model(t_u, w, b):\n",
+    "    return w * t_u + b\n",
+    "\n",
+    "def dmodel_dw(t_u, w, b):\n",
+    "    return t_u\n",
+    "\n",
+    "def dmodel_db(t_u, w, b):\n",
+    "    return 1."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "def grad_fn(t_u, t_c, t_p, w, b):\n",
+    "    dloss_dtp = dloss_fn(t_p, t_c)\n",
+    "    dloss_dw = dloss_dtp * dmodel_dw(t_u, w, b)\n",
+    "    dloss_db = dloss_dtp * dmodel_db(t_u, w, b)\n",
+    "    return torch.stack([dloss_dw.sum(), dloss_db.sum()])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "def training_loop(n_epochs, learning_rate, params, t_u, t_c):\n",
+    "    for epoch in range(1, n_epochs + 1):\n",
+    "        w, b = params\n",
+    "\n",
+    "        t_p = model(t_u, w, b)\n",
+    "        loss(loss_fn(t_p, t_c))\n",
+    "        grad = grad_fn(t_u, t_c, t_p, w, b)\n",
+    "\n",
+    "        params = params - learning_rate * grad\n",
+    "        print(\"Epoch %d, Loss %f\" % (epoch, float(loss)))\n",
+    "\n",
+    "    return params"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Tensor' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [18]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mtraining_loop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn_epochs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m100\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlearning_rate\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m1e-2\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mparams\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtensor\u001B[49m\u001B[43m(\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1.\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m      2\u001B[0m \u001B[43m              \u001B[49m\u001B[43mt_u\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mt_u\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mt_c\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mt_c\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Input \u001B[1;32mIn [17]\u001B[0m, in \u001B[0;36mtraining_loop\u001B[1;34m(n_epochs, learning_rate, params, t_u, t_c)\u001B[0m\n\u001B[0;32m      3\u001B[0m w, b \u001B[38;5;241m=\u001B[39m params\n\u001B[0;32m      5\u001B[0m t_p \u001B[38;5;241m=\u001B[39m model(t_u, w, b)\n\u001B[1;32m----> 6\u001B[0m \u001B[43mloss\u001B[49m\u001B[43m(\u001B[49m\u001B[43mloss_fn\u001B[49m\u001B[43m(\u001B[49m\u001B[43mt_p\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mt_c\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      7\u001B[0m grad \u001B[38;5;241m=\u001B[39m grad_fn(t_u, t_c, t_p, w, b)\n\u001B[0;32m      9\u001B[0m params \u001B[38;5;241m=\u001B[39m params \u001B[38;5;241m-\u001B[39m learning_rate \u001B[38;5;241m*\u001B[39m grad\n",
+      "\u001B[1;31mTypeError\u001B[0m: 'Tensor' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "training_loop(n_epochs=100, learning_rate=1e-2, params=torch.tensor([1., 0.]),\n",
+    "              t_u = t_u, t_c = t_c)"
    ],
    "metadata": {
     "collapsed": false
